# fileflow

./: .gitignore  README.md  RELEASE_NOTES.html  UPDATER_SETUP.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
scripts/: build-release.sh  generate-updater-keys.sh
src/: AboutModal.svelte  App.svelte  ConfigPanel.svelte  FileOrganizationModal.svelte  PendingFilesPanel.svelte  StatusPanel.svelte  UpdateModal.svelte  app.css  file-modal.html  file-modal.js  main.js  update-checker.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  file_organizer.rs  file_watcher.rs  main.rs
