[package]
name = "folder-watcher"
version = "0.1.3"
description = "A folder watcher that organizes files by type"
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon", "unstable"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
regex = "1.10"
urlencoding = "2.1"
image = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

